[tool.poetry]
name = "nut"
version = "1.2.0"
description = "Toolkit to automate and simplify common tasks involving Nessus"
authors = ["karrni <24398546+karrni@users.noreply.github.com>"]

[tool.poetry.scripts]
nut = "nut.main:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
PyYAML = "^6.0"
colorama = "^0.4.6"
urllib3 = "^1.26.15"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.257"
deptry = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=119

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
