[tool.poetry]
name = "nessus-utility-toolkit"
version = "1.3.0"
description = "Toolkit to automate and simplify common tasks involving Nessus"
authors = ["karrni <karrni@proton.me>"]
readme = "README.md"
packages = [
    { include = "nut" },
]

[tool.poetry.scripts]
nut = "nut.main:main"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
urllib3 = "^2.0.6"
prettytable = "^3.9.0"
pathvalidate = "^3.2.0"
netaddr = "^0.9.0"
pyyaml = "^6.0.1"
nessus-py = "^1.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.257"
deptry = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=119

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
